# InferScope

./: .gitignore  Makefile  README.md  pyproject.toml  verify_events.py
Doc/: AI-Driven Software Development Workflow.md  README.md
Doc/11_operations/: runbooks.md
Doc/1_requirements/: PRD.md  SRD.md
Doc/2_system_architecture/: SAD.md  architecture.yaml
Doc/3_module_design/: ICD.md
Doc/4_data_schema/: data_model.md
Doc/6_test_cases/: unit_tests.md
Doc/7_coding_standards/: coding_standards.md  repo_structure.md
Doc/8_module_implementation/: ASSUMPTIONS.md  COMPLETION_ASSESSMENT.md  CPU_COLLECTOR_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  QUICK_REFERENCE.md
Doc/9_system_integration/: integration_plan.md
docs/: AI-Driven Software Development Workflow.md  README.md
docs/10_operations/: runbooks.md
docs/1_requirements/: PRD.md  requirements.yaml
docs/2_system_architecture/: SAD.md  technology_rationale.md
docs/3_module_design/: ICD.md  interfaces.yaml
docs/4_data_schema/: data_model.md  schema.json
docs/5_test_framework/: test_strategy.md
docs/6_test_cases/: unit_tests.md
docs/7_coding_standards/: coding_standards.md  repo_structure.md
docs/8_system_integration/: deployment_architecture.md  (+2 more)
examples/: demo_inference.py  demo_llm_inference.py  demo_pytorch_inference.py  demo_trace_generator.py  run_profiler_demo.py  run_scaling_matrix.py
scripts/: README.md  clean.sh  generate_docs.py  generate_icd.py  generate_prd.py  generate_sad.py  inferscope  run_e2e_demo.py  run_profiler_demo.py
tests/: TEST_SUMMARY.md  conftest.py
(+29 files in other folders)
